--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         background-color: #f2f2f2;
         font-family: Arial, sans-serif;
         padding: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
       }
 
       h1 {
